# distributed-transaction-pipeline

./: .gitignore  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
chaos/: fault_injection.py
common/: models.py
coordinator/: coordinator.py  fraud_runtime.py  raft_cluster.py  raft_runtime.py
coordinator/grpc/: node_bootstrap.py  raft_cluster_client.py  raft_pb2.py  raft_pb2_grpc.py  raft_service.py  raft_transport.py  serialization.py
docker/: Dockerfile.coordinator  Dockerfile.raft-node  coordinator_entrypoint.py  raft_node_entrypoint.py
fraud/: scorer.py  worker.py
proto/: raft.proto
raft/: node.py  state_machine.py  storage.py  transport.py  types.py
raft/tests/: harness.py  test_election.py  test_failure_recovery.py  test_replication.py  test_state_machine_safety.py
scripts/: demo_conflicting_transactions.py  demo_fraud_burst.py  demo_kill_leader.py  generate_grpc_stubs.sh
settlement/: ledger_state_machine.py  submitter.py
streaming/: broker.py  consumer.py  group.py  partitioner.py  producer.py
tests/common/: test_models.py
tests/coordinator/: test_coordinator.py  test_fraud_burst_catch_rate.py  test_grpc_raft.py  test_grpc_raft_cluster_client.py  test_raft_cluster.py
tests/fraud/: test_scorer.py  test_worker.py
tests/settlement/: test_ledger_state_machine.py  test_settlement_via_raft.py  test_submitter.py
tests/streaming/: test_broker.py  test_end_to_end.py  test_group.py  test_group_consumer.py  test_partitioner.py
